--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "masonry-layout": "^4.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-infinite": "^0.13.0",
